--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "gatsby": "^2.18.12",
+    "gatsby-source-filesystem": "^2.1.43",
+    "gatsby-transformer-remark": "^2.6.45",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
